--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,12 +8,17 @@
 /* ==============================================================
                        GENERAL STYTLE
 ==== ============================================================*/
+
+
  body{
   background: url("../img/bg.png") ;
   margin: 0;
   padding: 0;
-}
+  font-family: 'GE SS Two Medium';
 
+}
+*{font-family: 'GE SS Two Medium';
+}
  .indoContainer{
   margin-top: 20px;
  }
@@ -59,7 +64,7 @@ margin:10px 10px 0 10px;
 
  .navList > li :before{
   margin-right: 20px;
-  content: "|";
+  content: "";
  }
  .navList > li:last-child:before{
  content: "";
@@ -69,7 +74,7 @@ margin:10px 10px 0 10px;
   width: 269px;
   height: 174px;
   background: url("../img/logo.png") no-repeat right;
-  z-index: 800;
+  z-index: 200;
   margin: 0 0 0 13px;
   padding: 0;
 
@@ -191,15 +196,60 @@ ul li.sgs{
  width: 40px;
  height: 46px;
 }
+.homeboxes li:hover {
+    filter: url(filters.svg#grayscale); /* Firefox 3.5+ */
+    filter: gray; /* IE6-9 */
+    -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
+    transition: all .2s ease-in-out;
+}
 
-
+.homehover img:hover {
+    filter: url(filters.svg#grayscale); /* Firefox 3.5+ */
+    filter: gray; /* IE6-9 */
+    -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
+    transition: all .2s ease-in-out;
+}
 /* SLIDER Container */
+
 .bannerHome{
   background: #FFF;
   height: 554px;
   position: relative;
   top: -65px;
 }
+.bannerinside{
+  background: #FFF;
+  height: 240px;
+  position: relative;
+  top: -65px;
+}
+.inside h1{
+color: #3A8A5B;
+}
+.inside p{
+  font-size: 22px;
+  line-height: 35px;
+  color: #666464;
+  font-weight: normal;
+  font-family: 'GE SS Two Medium';
+  text-align: justify;
+}
+.quotes{
+  background: url("../img/quotes.png") no-repeat;
+  float: left;
+  text-align: center;
+  width: 256px;
+  height: 235px;
+  overflow: hidden;
+  margin-bottom: 100px;
+}
+.quotes p{
+ padding: 70px 20px 0 20px;
+font-size: 20px;
+text-align: center;
+
+}
+
 .positioning{
   position: relative;
   top: -65px;
@@ -221,19 +271,19 @@ ul li.sgs{
   list-style: none;
 }
 .homeboxes li.ask-doc{
-  background: url('../img/ask-doc.png');
+  background: url('../img/ask-doc.png') no-repeat;
 }
 
 .homeboxes li.production-process{
-  background: url('../img/indomie-production-process.png');
+  background: url('../img/indomie-production-process.png') no-repeat;
 }
 
 .homeboxes li.facts{
-  background: url('../img/facts.png');
+  background: url('../img/facts.png') no-repeat;
 }
 
 .homeboxes li.indomie-quality-certificates{
-  background: url('../img/indomie-quality-certificates.png');
+  background: url('../img/indomie-quality-certificates.png') no-repeat;
 }
 .related h2{
   float: right;
@@ -248,12 +298,13 @@ ul li.sgs{
   float: right;
   direction: rtl;
   width: 100%;
+  font-size: 20px;
   text-align: right;
   padding-right: 10px;
 
 }
 p.caption{
-  font-size: 22px;
+  font-size: 20px;
   text-align: right;
   padding: 10px 5px;
 }
@@ -306,7 +357,7 @@ width: 70%;
 
 .footerbg{
   position:absolute;
-   bottom: 0px;
+   bottom: -20px;
    width:100%;
    float: left;
    left: 0;
@@ -320,15 +371,17 @@ width: 70%;
 #menu li {
     float: right;
     list-style: none;
-    border-right: 1px solid #222;
     box-shadow: 1px 0 0 #444;
     position: relative;
 }
 
 #menu a {
     float: left;
-    padding: 14px 30px;
+         padding: 14px 0;
+text-align: right;
     color: #000;
+    font-family:'GE SS Two Medium';
+    font-size: 20px;
     text-decoration: none;
     
 }
@@ -341,9 +394,13 @@ width: 70%;
 #menu:after {
     clear: both;
 }
-
+#menu > li > a:before {
+     content: "|";
+      padding: 14px 22px;
+}
 #menu {
     zoom:1;
+    margin-right: 30px;
 }
 
 
@@ -356,8 +413,8 @@ width: 70%;
     position: absolute;
     top: 48px;
     left: 0;
-    z-index: 1;    
-    background: rgba(255,255,255,.8);   
+    z-index: 400;    
+    background: rgba(255,255,255,.9);   
     box-shadow: 0 -1px 0 rgba(255,255,255,.3);  
     border-radius: 3px;
     transition: all .2s ease-in-out;
@@ -367,6 +424,7 @@ width: 70%;
     opacity: 1;
     visibility: visible;
     margin: 0;
+    padding: 0 30px;
 }
 
 #menu ul ul {
@@ -381,6 +439,7 @@ width: 70%;
     display: block;
     border: 0;
     _line-height: 0; /*IE6 only*/
+
     box-shadow: 0 1px 0 #111, 0 2px 0 #666;
 }
 
@@ -390,7 +449,6 @@ width: 70%;
 
 #menu ul a {    
     padding: 10px;
-    width: 150px;
     _height: 10px; /*IE6 only*/
     display: block;
     white-space: nowrap;
@@ -435,4 +493,36 @@ width: 70%;
 
 #menu ul li:last-child > a {
     border-radius: 0 0 3px 3px;
+}
+.inside{
+  padding: 10px;
+  direction: rtl;
+  text-align: right;
+}
+
+#cert a{
+  width: 250px;
+}
+#cert img{
+  width: 250px;
+}
+.caption{
+  text-align: center;
+}
+.panel-heading h4 a{
+font-size: 20px;
+font-weight: normal;
+display: block;
+text-decoration: none;
+}
+
+.panel-heading h4 a:hover{
+color: #3A8A5B;
+}
+.panel-heading h4 a:active{
+color: #3A8A5B;
+}
+.panel-body{
+  font-size: 18px;
+  font-family: sans-serif;
 }
