--- a/public/css/fonts.css
+++ b/public/css/fonts.css
@@ -1,20 +1,12 @@
-@font-face {
-  font-family: 'GE SS Two Medium';
-  src: url('GE_SS_Two_Medium.eot');
-  src: local('?'),
-    url('../font/GE_SS_Two_Medium.woff') format('woff'),
-    url('../font/GE_SS_Two_Medium.ttf') format('truetype'),
-    url('../font/GE_SS_Two_Medium.svg') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
-
 
 @font-face {
-  font-family: "Hacen Liner Screen";
-        src: url("../font/hacen_liner_screen.eot"); /* IE 9 */
-        src: url("../font/hacen_liner_screen.eot?") format("eot"), /* IE 6-8 */
-             url("../font/hacen_liner_screen.otf") format("opentype"), /* Other browsers */
-             url("../font/hacen_liner_screen.ttf") format("truetype"); /* Safari, Android, iOS */
-}
+            font-family:"GE SS Two Light";
+            src:url("../font/GE_SS_Two_Light.eot?") format("eot")
+            ,url("../font/GE_SS_Two_Light.woff") format("woff")
+            ,url("../font/GE_SS_Two_Light.ttf")format("truetype"),
+            url("../font/GE_SS_Two_Light.svg#GESSTwoLight-Light") format("svg");
+            font-weight:normal;font-style:normal;}
+
+
+
+
